# duckn

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: dicom-spec.md  duckn-converter-prototype.md  duckn-spec.md  dwi-bruker-amendment.md  dwi-extension.md  fits-extension.md  microscopy-extension.md  nifti-spec.md  nrrdz-converter-prototype.md  nrrdz-spec.md  performance.md  provenance-extension.md  segmentation-ext-spec.md  transform-spec.md  units-spec.md  zero-copy-axis-order.md  zmp-guide.md
js/duckn-cornerstone/: package.json
js/duckn-cornerstone/demo/: index.html  package.json  vite.config.js
js/duckn-cornerstone/demo/src/: main.js
js/duckn-cornerstone/src/: index.ts
js/duckn-reader/: package.json
js/duckn-reader/demo/: generate.py  index.html  package.json  vite.config.js
js/duckn-reader/src/: ducknToImageData.js  index.js
js/duckn-spatial/: package.json
js/duckn-spatial/src/: cornerstone-adapter.js  index.js  vtk-adapter.js
output/idc/: batch-01.json
scripts/: batch_build_patients.py  build_nlst_batch.py  build_patient_zmp.py  fetch_idc.py
slicer/SlicerDuckn/: CMakeLists.txt  README.md
slicer/SlicerDuckn/SlicerDucknIO/: CMakeLists.txt  SlicerDucknIO.py
src/duckn/: __init__.py  adapters.py  bids.py  build_patient_zmp.py  cast.py  cli.py  convert.py  dicom_convert.py  extensions.py  idc_utils.py  idc_zmp.py  io.py  models.py  nibabel_adapter.py  nifti_convert.py  query.py  resample.py  seg_convert.py  seg_nrrd.py  sitk_adapter.py  spatial.py  volume.py  vtk_adapter.py  wsi_zmp.py  zarr_io.py  zarr_zip_convert.py  zip_zmp.py
src/nrrdz/: __init__.py  cli.py  convert.py  dicom_convert.py  dwi_nrrd.py  models.py  nifti_convert.py  seg_nrrd.py  zarr_io.py
tests/: generate_test_nrrds.py  test_adapter_calibration.py  test_dicom_convert.py  test_dicom_models.py  test_dwi_nrrd.py  test_nifti_convert.py  test_nifti_models.py  test_open_array.py  test_read_array.py  test_resample.py  test_seg_nrrd.py  test_segmentation_models.py  test_zip_store.py
tests/data/: ct_with_transforms.nrrd  keyvalues.nrrd  measurement_frame.nrrd  minimal.nrrd  mixed_centering.nrrd  rgba_image.nrrd  scalar_3d_lps_aniso.nrrd  scalar_3d_oblique.nrrd  scalar_3d_ras.nrrd  tensor_4d.nrrd  thickness.nrrd  time_series_4d.nrrd  vector_field_4d.nrrd
(+2 files in other folders)
