[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "duckn"
version = "0.1.7"
description = "duckn: axis-rich array metadata convention for Zarr V3"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pynrrd>=1.0",
    "zarr>=3.0",
    "numpy>=1.24",
    "click>=8.0",
]

[project.optional-dependencies]
dicom = ["pydicom>=2.4"]
nifti = ["nibabel>=4.0"]

[project.scripts]
duckn = "duckn.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/duckn"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "idc-index>=0.11.11",
    "pyarrow>=23.0.1",
]
